--- a/miniproject8/page2.html
+++ b/miniproject8/page2.html
@@ -10,7 +10,7 @@
 <body>
     <p></p>
     <p class="page2paragraph">I'm not sure, but here's the <a
-        href="https://www.en.wikipedia.org/wiki/Taxi" target="_blank">Wiki on Taxis</a></P>
+        href="https://en.wikipedia.org/wiki/Taxi" target="_blank">Wiki on Taxis</a></P>
 
     <p class="paragraph"> <a href="index.html"> Go back because I want to see taxis again... </a>
     </p>
