--- a/min/page3.html
+++ b/min/page3.html
@@ -18,14 +18,14 @@
     <main>
         
     </main>
-    <h1 class="heading">Optical Illusion #1</h1>
+    <h1 class="heading">Optical Illusion #3</h1>
     <div class="wrap">
-        <div id="container"></div>
-        <script src="optic1.js"></script>
+        <div id="container2"></div>
+            <script src="optic3.js"></script>
 
     </div>
 
-    <p class="paragraph"> Induced Macropsia Illusion?
+    <p class="paragraph"> Induced Macropsia Illusion
     </p>
 
     <p class="paragraph">Want to go to the <a
