--- a/min/page4.html
+++ b/min/page4.html
@@ -29,7 +29,7 @@
     </p>
 
     <p class="paragraph">Want to go to the <a
-            href="index.html">next one?</a></P>
+            href="page5.html">next one?</a></P>
 
 </body>
 
